--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="24點遊戲">
   <meta name="google-site-verification" content="HxVMPzSeSmu5iillj6wIykv7tb4vIueRzq2ROBZTFLo" />
 
   <!-- iOS meta tags & icons -->
