darker app bar color

--- a/web/index.html
+++ b/web/index.html
@@ -110,7 +110,7 @@
           const meta = document.querySelector('meta[name="theme-color"]');
           if (theme === 'dark') {
             document.body.style.backgroundColor = '#141218';
-            meta.setAttribute('content', '#0F0D12');
+            meta.setAttribute('content', '#0C0B0F');
           } else {
             document.body.style.backgroundColor = '#fef7ff';
             meta.setAttribute('content', '#2196F3');
